[gd_scene load_steps=23 format=2]

[ext_resource path="res://Player/decomposed_player.png" type="Texture" id=1]
[ext_resource path="res://Player/SFX/Player - Suction Finish.ogg" type="AudioStream" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Player/SFX/Player - Shoot V1.ogg" type="AudioStream" id=4]
[ext_resource path="res://Player/SFX/Player - Suction Power Up.ogg" type="AudioStream" id=5]
[ext_resource path="res://Player/SFX/Player - Suction Power Down.ogg" type="AudioStream" id=6]
[ext_resource path="res://Shader/Rectangle 1.png" type="Texture" id=7]

[sub_resource type="Animation" id=13]
resource_name = "Shooting"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 2, 3, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "onShootingAnimationFinish"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Suction"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walking"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Shooting"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Suction"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachine" id=10]
states/Shooting/node = SubResource( 14 )
states/Shooting/position = Vector2( 391, 174 )
states/Suction/node = SubResource( 6 )
states/Suction/position = Vector2( 537, 77 )
states/Walking/node = SubResource( 7 )
states/Walking/position = Vector2( 283, 77 )
transitions = [ "Walking", "Suction", SubResource( 9 ), "Suction", "Walking", SubResource( 12 ), "Walking", "Shooting", SubResource( 15 ), "Shooting", "Walking", SubResource( 16 ) ]
start_node = "Walking"
graph_offset = Vector2( 15, 40 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="CircleShape2D" id=2]
radius = 9.03929

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( -10, 0, 10, 0, 0, -20 )

[sub_resource type="Gradient" id=17]
colors = PoolColorArray( 0, 0, 0, 0, 0.0617676, 0.988281, 0.508729, 1 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2
hframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Shooting = SubResource( 13 )
anims/Suction = SubResource( 4 )
anims/Walking = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 11 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.358982, 2.06413 )
shape = SubResource( 2 )

[node name="AbsorbArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="AbsorbCollision" type="CollisionShape2D" parent="AbsorbArea"]
position = Vector2( -0.0462036, -39.293 )
rotation = -3.14159
scale = Vector2( 2, 2 )
shape = SubResource( 3 )
disabled = true

[node name="SuctionEmitter1" type="CPUParticles2D" parent="AbsorbArea"]
position = Vector2( 15.6126, -55.4463 )
emitting = false
amount = 10
lifetime = 1.1
emission_shape = 2
emission_rect_extents = Vector2( -4, 1 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( -25, 70 )
color_ramp = SubResource( 17 )

[node name="SuctionEmitter2" type="CPUParticles2D" parent="AbsorbArea"]
position = Vector2( 5.17996, -59.9696 )
rotation = -0.261799
scale = Vector2( 1, 1 )
emitting = false
amount = 10
lifetime = 1.1
emission_shape = 2
emission_rect_extents = Vector2( -4, 1 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( -25, 70 )
color_ramp = SubResource( 17 )

[node name="SuctionEmitter3" type="CPUParticles2D" parent="AbsorbArea"]
position = Vector2( -6.02393, -56.148 )
rotation = -0.523599
emitting = false
amount = 10
lifetime = 1.1
emission_shape = 2
emission_rect_extents = Vector2( -4, 1 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( -25, 70 )
color_ramp = SubResource( 17 )

[node name="ShootingSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="OnSuctionSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SuctionPowerUpSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SuctionPowerDownSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( -0.365967, 0.689522 )
scale = Vector2( 0.244318, 0.244318 )
texture = ExtResource( 7 )
color = Color( 1, 1, 1, 0.266667 )
shadow_enabled = true

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -2.78218, 8.08219 )
scale = Vector2( 0.0513775, 0.0513775 )
texture = ExtResource( 7 )
color = Color( 0.141176, 0.976471, 0.152941, 0.721569 )
energy = 1.25
shadow_enabled = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AbsorbArea" to="." method="_on_AbsorbArea_body_entered"]
